--- a/styles/sakura_earthly.css
+++ b/styles/sakura_earthly.css
@@ -11,13 +11,13 @@ html {
 }
 
 body {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   line-height: 1.618;
-  max-width: 38em;
-  margin: auto;
+  /*  max-width: 38em;
+ margin: auto;*/
   color: #222222;
   background-color: #ffffff;
-  padding: 13px;
+  /*  padding: 13px; */
 }
 
 @media (max-width: 684px) {
@@ -40,7 +40,7 @@ h6 {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
     'Noto Sans', sans-serif;
   font-weight: 700;
-  margin-top: 3rem;
+  /*  margin-top: 1rem;*/
   margin-bottom: 1.5rem;
   overflow-wrap: break-word;
   word-wrap: break-word;
@@ -57,24 +57,24 @@ h2 {
 }
 
 h3 {
-  font-size: 1.75em;
-}
-
-h4 {
-  font-size: 1.5em;
-}
-
-h5 {
   font-size: 1.25em;
 }
 
-h6 {
+h4 {
   font-size: 1em;
+}
+
+h5 {
+  font-size: 0.75em;
+}
+
+h6 {
+  font-size: 0.5em;
 }
 
 p {
   margin-top: 0px;
-  margin-bottom: 2.5rem;
+  /*  margin-bottom: 2.5rem; */
 }
 
 small,
